changed position to fixed for navbar on mobile

--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -5,7 +5,7 @@ form p {
 
 .form-container {
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     align-items: flex-start;
 }
 
