--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -55,8 +55,8 @@
 
 @media (max-width: 992px) {
     .nav-bar {
-        position: absolute;
-        bottom: -1px;
+        position: fixed;
+        bottom: 0;
         left: 50%;
         transform: translateX(-50%);
         background-color: rgba(0,0,0,0.5);
