--- a/src/index.css
+++ b/src/index.css
@@ -257,7 +257,7 @@ input.error {
 	}
 
 	.heading-xl {
-		font-size: 42px;
+		font-size: 45px;
 		line-height: 70px;
 		letter-spacing: -2.5px;
 	}
